# apia

./: .gitignore  README.md  apia.cabal  firstPartOfReadme  install.sh  package.yaml  stack.yaml  usage
app/: Main.hs
src/: AnalyseHistory.hs  ArgParse.hs  ChooseAction.hs  DecimalTime.hs  ParseClockFile.hs  Paths_apia.hs  TellUser.hs  UsageText.hs
test/: Test.hs  TestAnalyseHistory.hs  TestArgParse.hs  TestParseClockFile.hs
