name:                apia
version:             0.1.0.0
homepage:            https://bitbucket.org/5-o/apia
license:             GPL-3
license-file:        LICENSE
author:              5-o
maintainer:          5-o
copyright:           2017 5-o
category:            Time management
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     AnalyseHistory
                     , ArgParse
                     , ChooseAction
                     , DecimalTime
                     , ParseClockFile
                     , TellUser
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
                     , text
                     , text-show
                     , time
  default-language:    Haskell2010

executable apia
  hs-source-dirs:      app
  ghc-options:         -Wall -Werror -O2
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , apia
                     , directory
                     , time
